# autobots-todo-fastapi

./: .gitignore  README.md  pyproject.toml  sql_app.db
app/: crud.py  main.py  models.py  schemas.py
tests/: conftest.py  test_app.py
